--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "hackernews_sample",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "nodemon app.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,17 +12,21 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.0.10",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1"
   }
